--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,1 +1,24 @@
-<h1>Hello world</h1>
+<!doctype html>
+<html lang="">
+  <head>
+      <meta charset="utf-8" />
+      <title>Aspnet Demo</title>
+      <link rel="stylesheet" href="jspm_packages/npm/font-awesome@4.6.3/css/font-awesome.min.css">
+      <link rel="stylesheet" href="jspm_packages/github/twbs/bootstrap@3.3.6/css/bootstrap.css">
+      <meta name="description" content="" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <!-- Place favicon.ico in the root directory -->
+  </head>
+  <body aurelia-app>
+    <div class="splash">
+        <div class="message">Loading</div>
+        <i class="fa fa-spinner fa-spin"></i>
+    </div>
+    
+    <script src="jspm_packages/system.js"></script>
+    <script src="config.js"></script>
+    <script>
+        System.import("aurelia-bootstrapper");
+    </script>
+  </body>
+</html>
