--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <!-- Place favicon.ico in the root directory -->
   </head>
-  <body aurelia-app>
+  <body aurelia-app="main">
     <div class="splash">
         <div class="message">Loading</div>
         <i class="fa fa-spinner fa-spin"></i>
